--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/open-sans": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@types/react-navigation": "^3.4.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.471.0",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
+    "react-native-svg": "^15.11.1",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.0.7",
+    "@types/react-native": "^0.73.0",
+    "@types/styled-components-react-native": "^5.2.5",
     "typescript": "^5.3.3"
   },
   "private": true
